<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">XYE Tools</string>
    <string name="user_interface">Interface</string>
    <string name="bars">Bar Interface</string>
    <string name="system">System</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="empty">Empty</string>
    <string name="general_ui">General UI</string>
    <string name="battery">Battery</string>
    <string name="clock">Clock</string>
    <string name="signal">Signal</string>
    <string name="statusbar">Statusbar</string>
    <string name="quick_toggles">Quick Toggles</string>
    <string name="power_widget">Power Widget</string>
    <string name="status_extras">Status Extras</string>
    <string name="others">Other</string>
    <string name="navigation_bar">Navigation Bar</string>
    <string name="power_menu">Power Menu</string>
    <string name="led_options">LED</string>
    <string name="pie">PIE™</string>
    <string name="spen_options">S Pen Gestures</string>
    <string name="header_system">System</string>
    <string name="sound">Sound</string>
    <string name="hybridsettings">Hybrid Properties</string>
    <string name="lockscreen_options">Lockscreen</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="ribbon">Ribbon</string>
    <string name="weather">Weather</string>
    <string name="tools">Tools</string>
    <string name="bar_cat">Bar</string>
    <string name="notif_cat">Notification</string>
    <string name="title_general_ui">General UI</string>
    <string name="title_statusbar_clock">Clock</string>
    <string name="title_quick_toggles">Quick Toggles</string>
    <string name="title_power_widget">Power Widget</string>
    <string name="title_statusbar_signal">Signal</string>
    <string name="title_statusbar_battery">Battery</string>
    <string name="title_statusbar">Status Bar</string>
    <string name="title_status_extras">Status Extras</string>
    <string name="title_navbar">Navigation Bar</string>
    <string name="title_spen">S Pen Gestures</string>
    <string name="title_navring">Navigation Ring</string>
    <string name="title_power_menu">Power Menu</string>
    <string name="title_led_control">LED Control</string>
    <string name="title_lockscreen">Lockscreen</string>
    <string name="title_ribbon">Ribbon</string>
    <string name="title_pie">PIE™</string>
    <string name="title_hybridsettings">Hybrid Properties</string>
    <string name="title_clipboard_share">Copy to Clipboard</string>
    <string name="ribbon_settings_title">Ribbon options</string>
    <string name="themes_title">Themes</string>
    <string name="clipboard_notification">Copied to clipboard</string>
    <string name="header_summary">@null</string>
    <string name="menu_nav_bar_reset">Reset Navbar</string>
    <string name="menu_main_activity_change_locale">Locale</string>
    <string name="menu_ribbon_rearrange">Rearrange ribbon</string>
    <string name="menu_user_interface_reset">Reset notification wallpaper</string>
    <string name="menu_lockscreens_reset">Reset lockscreen wallpaper</string>
    <string name="menu_ribbon_reset">Reset ribbon</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="spen_left_title">Action on swipe left</string>
    <string name="spen_right_title">Action on swipe right</string>
    <string name="spen_up_title">Action on swipe up</string>
    <string name="spen_down_title">Action on swipe down</string>
    <string name="spen_double_title">Action on double tap</string>
    <string name="spen_long_title">Action on long press</string>
    <string name="spen_enable">S Pen Gestures</string>
    <string name="spen_enable_summary">Set custom actions for S Pen gestures</string>
    <string name="spen_extras_cat">S Pen Extras</string>
    <string name="spen_gestures_cat">S Pen Gestures</string>
    <string name="enable_stylus_pointer_title">S Pen pointer</string>
    <string name="enable_stylus_pointer_summary">Enable the mouse icon when using the S Pen</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="group_applications">Applications</string>
    <string name="choose_application">Choose application</string>
    <string name="select_application">Select application</string>
    <string name="dpi">DPI</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#FF000000</string>
    <string name="set">Set</string>
    <string name="ics_color">Holo</string>
    <string name="title_show_screenshot">Screenshot</string>
    <string name="title_show_airplane_toggle">Airplane mode</string>
    <string name="power_menu_expanded_desktop">Expanded desktop</string>
    <string name="expanded_desktop_cat">Advanced</string>
    <string name="summary_expanded_desktop">%1$s</string>
    <string name="expanded_desktop_summary_status_bar">Status bar visible</string>
    <string name="expanded_desktop_summary_no_status_bar">Status bar hidden</string>
    <string name="expanded_desktop_disabled">Off</string>
    <string name="title_show_volume_state_toggle">Volume states</string>
    <string name="expanded_desktop_status_bar">Status bar visible</string>
    <string name="expanded_desktop_no_status_bar">Status bar hidden</string>
    <string name="title_show_navbar_hide">Navigation bar menu</string>
    <string name="title_show_reboot_keyguard">Reboot option on lockscreen</string>
    <string name="status_bar_clock_header">Clock</string>
    <string name="status_bar_battery_header">Battery</string>
    <string name="status_bar_signal_header">Signal</string>
    <string name="status_bar_misc">Misc</string>
    <string name="status_bar_clock_title">Clock style</string>
    <string name="status_bar_general_title">General</string>
    <string name="auto_hide_statusbar">Auto Hide statusbar</string>
    <string name="auto_hide_statusbar_summary">Statusbar hides itself when there are no notifications</string>
    <string name="transparency_dialog_title">Transparency settings</string>
    <string name="navigation_bar_color_title">Navigation Bar color</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display number of pending notifications on the status bar</string>
    <string name="notification_behaviour_title">Notification behavior</string>
    <string name="notification_show_wifi_ssid_title">Show Wifi network</string>
    <string name="notification_show_wifi_ssid_summary">Display the name of the currently connected Wifi network on notification drawer</string>
    <string name="notification_wallpaper_title">Choose notification background</string>
    <string name="notification_wallpaper_summary">You can remove the wallpaper from the menu in this window</string>
    <string name="notif_wallpaper_alpha_title">Notification background alpha</string>
    <string name="brightness_slider_title">Statusbar brightness slider</string>
    <string name="brightness_slider_summary">Allows you to slide your finger along the top of the statusbar to change the brightness. Does nothing when autobrightness is enabled.</string>
    <string name="lockscreen_battery_status_title">Battery status</string>
    <string name="ls_shortcuts_title">Lockscreen Shortcuts</string>
    <string name="screen_security_category">Screen security</string>
    <string name="screen_security_summary">View or change lock screen security, delay and timeout settings</string>
    <string name="lockscreen_target_title">Slider</string>
    <string name="lockscreen_target_summary">View or change custom slider shortcuts</string>
    <string name="lockscreen_maximize_widgets_title">Maximize widgets</string>
    <string name="lockscreen_maximize_widgets_summary">Show widgets maximized and the unlock minimized when the screen is turned on</string>
    <string name="lockscreen_hide_initial_page_hints_title">Hide initial page hints</string>
    <string name="lockscreen_hide_initial_page_hints_summary">Set wether the hints for the left and right widgets are shown when the screen is turned on.</string>
    <string name="lockscreen_use_widget_container_carousel_title">Use widget carousel</string>
    <string name="lockscreen_use_widget_container_carousel_summary">Use a carousel animation when switching between lockscreen widgets.</string>
    <string name="lockscreen_auto_rotate_title">Allow lockscreen rotation</string>
    <string name="lockscreen_auto_rotate_summary">Lockscreen will have ability to rotate via device orientation. This is independent of Auto-rotation in display</string>
    <string name="lockscreen_all_widgets_title">Allow all widgets</string>
    <string name="lockscreen_all_widgets_summary">Warning** Some widgets are not intended to be used on the lockscreen, The widget developer, Team XYE are not responsible for your choice of lockscreen widgets. Choose responsibly.</string>
    <string name="lockscreen_unlimited_widgets_title">Allow unlimited widgets</string>
    <string name="lockscreen_unlimited_widgets_summary">Warning** Adding too many widgets can cause major lag issues with lockscreen.</string>
    <string name="lockscreen_longpress_challenge_title">Enable longpress to unlock</string>
    <string name="lockscreen_longpress_challenge_summary">This enables your device to be unlocked with the widgets maximised by long pressing the lock icon.</string>
    <string name="lockscreen_custom_background_title">Background</string>
    <string name="see_through_title">See through</string>
    <string name="see_through_summary">Allows to see the application behind the lock screen.</string>
    <string name="ls_color_alpha_title">Lockscreen Tint Color</string>
    <string name="ls_color_alpha_summary">Allows to change the tint of the lock screen.</string>
    <string name="additional_options_title">Additional options</string>
    <string name="unlock_menu_unlock_title">Menu unlock</string>
    <string name="unlock_menu_unlock_summary">Pressing the menu button unlocks the device</string>
    <string name="unlock_home_unlock_title">Home unlock</string>
    <string name="unlock_home_unlock_summary">Pressing the home button unlocks the device</string>
    <string name="unlock_quick_unlock_control_title">Quick unlock</string>
    <string name="unlock_quick_unlock_control_summary">Unlock automatically when the correct PIN/password is entered</string>
    <string name="delay_and_timeout_title">Lock delay</string>
    <string name="slide_lock_delay_title">Delay screen lock</string>
    <string name="slide_lock_timeout_delay_title">Delay after timeout</string>
    <string name="slide_lock_screenoff_delay_title">Delay after turned off</string>
    <string name="lockscreen_vibrate_enabled_title">Vibrate</string>
    <string name="lockscreen_vibrate_enabled_head">Vibrate when unlocking</string>
    <string name="lock_clock_title">Clock widget</string>
    <string name="lock_clock_summary">View or change how the \'cLock\' Home and Lock screen widgets will display</string>
</resources>