<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:key="bars"
            android:title="@string/bar_cat">

        <Preference
            android:key="transparency_dialog"
            android:title="@string/transparency_dialog_title" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
                android:key="nav_bar_color"
                android:title="@string/navigation_bar_color_title"
                android:defaultValue="#000000" />

        <!--net.margaritov.preference.colorpicker.ColorPickerPreference
                android:key="stat_bar_color"
                android:title="@string/status_bar_color_title"
                android:defaultValue="#000000" /-->

        <CheckBoxPreference
            android:key="status_bar_notif_count"
            android:title="@string/status_bar_notif_count_title"
            android:summary="@string/status_bar_notif_count_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="statusbar_brightness_slider"
            android:title="@string/brightness_slider_title"
            android:summary="@string/brightness_slider_summary" />

        <Preference
            android:key="custom_carrier_label"
            android:title="@string/custom_carrier_label_title" />

        <CheckBoxPreference
            android:key="status_bar_auto_hide"
            android:title="@string/auto_hide_statusbar"
            android:summary="@string/auto_hide_statusbar_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
            android:key="notif"
            android:title="@string/notif_cat">

        <CheckBoxPreference
            android:key="notification_show_wifi_ssid"
            android:title="@string/notification_show_wifi_ssid_title"
            android:summary="@string/notification_show_wifi_ssid_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="notifications_behaviour"
            android:title="@string/notification_behaviour_title"
            android:entries="@array/notifs_beh_entries"
            android:entryValues="@array/notifs_beh_values" />

        <Preference
            android:key="notification_wallpaper"
            android:title="@string/notification_wallpaper_title"
            android:summary="@string/notification_wallpaper_summary" />

        <Preference
            android:key="notification_wallpaper_alpha"
            android:title="@string/notif_wallpaper_alpha_title" />

    </PreferenceCategory>

</PreferenceScreen>
